add gmail configuration in the env file

--- a/SnowTricks/.env
+++ b/SnowTricks/.env
@@ -19,7 +19,7 @@ APP_SECRET=27941f3792dfc5386749187027e6c0c4
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=gmail://zineb.mezlef@gmail.com:detesterfly@default?verify_peer=0
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -30,3 +30,8 @@ APP_SECRET=27941f3792dfc5386749187027e6c0c4
 DATABASE_URL="mysql://root:root@127.0.0.1:3306/snowtricks?serverVersion=5.7"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
